--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Faker = "^4.18.0"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 black = {version = "^20.8b1", allow-prereleases = true}
+pylint = "^2.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
